--- a/style.css
+++ b/style.css
@@ -6,3 +6,63 @@
   font-weight: 400;
   font-style: normal;
 }
+.display-flex{
+  display: flex;
+}
+.navbar{
+  justify-content: space-between;
+  align-items: center;
+}
+.nav-item{
+  list-style: none;
+  margin-right: 30px;
+}
+.nav-link{
+  text-decoration: none;
+  font-weight: 500;
+
+}
+.text-gray{
+  color: #424242;
+}
+.text-light-gray{
+  color: #727272;
+}
+.bg-light{
+  background-color: #e4c9aa;
+}
+.navbar, .banner{
+  max-width: 1440px;
+  margin: 0 auto;
+}
+.brand{
+  font-weight: 700;
+  font-size: 3rem;
+}
+.banner-content{
+  max-width: 850px;
+  margin: auto;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.banner-title{
+  font-weight: 700;
+  font-size: 4rem;
+}
+.btnp{
+  background-color: #FF900E;
+  color: white;
+  padding: 20px 25px;
+  font-size: 1.25rem;
+  font-weight: 600;
+  border-radius: 8px;
+  border: none;
+}
+.banner-image{
+  width: 100%;
+}
+  @media screen and (max-width:576px){
+    .navbar, .nav-link{
+      flex-direction: column;
+    }
+  }
