--- a/style.css
+++ b/style.css
@@ -61,8 +61,55 @@
 .banner-image{
   width: 100%;
 }
+main{
+  max-width: 1440px;
+  margin: 0 auto;
+}
+main > section{
+  margin-top: 130px;
+}
+.teams{
+  align-items: center;
+}
+.team-img-container{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  gap: 24px;
+}
+.our-features{
+  margin-left: 130px;
+  max-width: 530px;
+}
+
+
+#Quick-list{
+  font-weight: 500;
+}
+.text-primary{
+  color: #FF900E;
+}
+.section-title{
+  font-size: 2.8rem;
+  font-weight: 700;
+}
   @media screen and (max-width:576px){
-    .navbar, .nav-link{
+    .navbar, 
+    .nav-link, 
+    .teams{
       flex-direction: column;
+    }
+    .team-img-container{
+      grid-template-columns: repeat(1,1fr);
+    }
+    .our-features{
+      margin-left: 20px;
+    }
+  }
+  @media screen and (min-width:576px) and (max-width:992px){
+    .teams{
+      flex-direction: column;
+    }
+    .our-features{
+      margin: 50px auto;
     }
   }
