--- a/style.css
+++ b/style.css
@@ -92,24 +92,101 @@ main > section{
   font-size: 2.8rem;
   font-weight: 700;
 }
+.facts-container{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+
+}
+.fact-card{
+  border: 1px solid #FF900F;
+  width: 240px;
+  height: 240px;
+  border-radius: 8px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.fact-number{
+  font-size: 2.8rem;
+  font-weight: 600;
+  margin-top: 5px;
+}
+.face-name{
+  font-weight: 600;
+  font-weight: 1.28rem;
+  margin-top: 10px;
+}
+.fact-description{
+  max-width: 540px;
+}
+.sponsor-info{
+  max-width: 540px;
+  margin: 50px auto;
+  text-align: center;
+}
+.sponsor-companies{
+  display: grid;
+  grid-template-columns: repeat(5,1fr);
+}
+.sponsor-companies img{
+  filter: grayscale(100%);
+}
+#feature-section-title{
+  border-left: 5px solid #FF900E;
+  padding-left: 20px;
+}
+.feature-card, .feature-title{
+  font-weight: 600;
+  font-size: 1.25rem;
+  
+}
+.feature-card{
+  padding: 30px;
+  box-shadow: 0 4px 30px 0;
+  margin-bottom: 20px;
+  border-radius: 8px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+.features{
+  gap: 140px;
+}
   @media screen and (max-width:576px){
     .navbar, 
     .nav-link, 
     .teams{
       flex-direction: column;
     }
-    .team-img-container{
+    .team-img-container, .facts-container, .sponsor-companies{
       grid-template-columns: repeat(1,1fr);
     }
     .our-features{
       margin-left: 20px;
     }
+    .facts-container, .sponsor-companies{
+      justify-items: center;
+      gap: 24px;
+      }
+    .sponsor-companies{
+    justify-items: center;
+    gap: 50px;
   }
+}
   @media screen and (min-width:576px) and (max-width:992px){
     .teams{
       flex-direction: column;
     }
+    .facts-container{
+      grid-template-columns: repeat(2,1fr);
+      justify-items: center;
+      gap: 20px;
+    }
     .our-features{
       margin: 50px auto;
+    }
+    .sponsor-companies{
+      grid-template-columns: repeat(2,1fr);
+    gap: 50px;
+    justify-items: center;
     }
   }
