added experience badge and made feature section responsive

--- a/style.css
+++ b/style.css
@@ -151,10 +151,25 @@ main > section{
 .features{
   gap: 140px;
 }
+#experience-badge{
+  padding: 45px 42px;
+  font-family: 1.5rem;
+  font-weight: 500;
+  margin-left: -100px;
+  margin-top: -100px;
+}
+.experience-year{
+  font-size: 4 rem;
+  font-weight: 700;
+}
+.feature-architact{
+  width: 100%;
+}
   @media screen and (max-width:576px){
     .navbar, 
     .nav-link, 
-    .teams{
+    .teams, 
+    .features{
       flex-direction: column;
     }
     .team-img-container, .facts-container, .sponsor-companies{
@@ -171,9 +186,13 @@ main > section{
     justify-items: center;
     gap: 50px;
   }
+  #experience-badge{
+    margin-top: 20px;
+    margin-left: 20px;
+  }
 }
   @media screen and (min-width:576px) and (max-width:992px){
-    .teams{
+    .teams, .features{
       flex-direction: column;
     }
     .facts-container{
@@ -188,5 +207,9 @@ main > section{
       grid-template-columns: repeat(2,1fr);
     gap: 50px;
     justify-items: center;
+    }
+    #experience-badge{
+      margin-top: 20px;
+      margin-left: 20px;
     }
   }
